<resources>
    <string name="app_name">App1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="maxTemp">Maximum Temperature</string>
    <string name="minTemp">Minimum Temperature</string>
    <string name="currentTemp">Current Temperature</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="humidity">Humidity</string>


</resources>